k8s/deployment-template-clusterIP.yaml
#        - image: turkiznazaba/appointments:2023-12-01-09-21-36 #to be changed

apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointments
  template:
    metadata:
      labels:
        app: appointments
    spec:
      containers:
        - image: turkiznazaba/appointments:2023-12-27-15-52-22 #to be changed
          name: appointments
          ports:
            - containerPort: 8080
              name: server
#          livenessProbe:
#            httpGet:
#              path: /health/live
#              port: server
#            initialDelaySeconds: 20
#            periodSeconds: 3
#          readinessProbe:
#            httpGet:
#              path: /health/ready
#              port: server
#            initialDelaySeconds: 20
#            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: appointments
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: appointments
