k8s/deployment-template.yaml
#        - image: turkiznazaba/appointments:2023-12-01-09-21-36 #to be changed

apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-catalog
  template:
    metadata:
      labels:
        app: image-catalog
    spec:
      containers:
        - image: turkiznazaba/appointments:latest
          name: image-catalog
          ports:
            - containerPort: 8080
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: image-catalog
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: image-catalog
