k8s/ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /appointments(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: appointments
                port:
                  number: 8080
          - path: /customers(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: customers
                port:
                  number: 8081
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: aks-helloworld-one
                port:
                  number: 80
